<resources>
    <string name="app_name">Meili</string>
    <string name="app_moto">Tourism Revolutionised</string>
    <string name="activity_google_sign_in">Google Sign In</string>
    <string name="title_activity_map">Map</string>
    <string name="average_rating_format">%.2f</string>
    <string name="title_hint">Title</string>
    <string name="summary_hint">Summary</string>
    <string name="submit_text">Submit</string>
    <string name="cancel_text">Cancel</string>
    <string name="fab_review_content_description">add/edit my review</string>
    <string name="sign_in_button_message">Sign In</string>
    <string name="sign_out_button_message">Sign Out</string>
    <string name="welcome_message">Welcome %s!</string>
    <string name="fetch_pois_error_message">An error occurred while fetching POIs</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="poi_no_info">No information found for this point of interest :(</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="friend_succ">Friendship successful!</string>
    <string name="accept_friend">Accept friendship with %s</string>
    <string name="accept">Accept</string>
    <string name="confirm_code">Confirm the code matches on both devices to finalize your friendship: %s</string>
    <string name="friend_abort">Friendship aborted!</string>
    <string name="location_required">Location is required for this feature</string>
    <string name="looking_for_friend">Looking for your friend!</string>
    <string name="error_find_friend">Error finding friend</string>
    <string name="lens_poi_distance">%d meters away</string>
    <string name="no_poi_found">No Point of Interest found</string>
    <string name="no_landmark_detected">No landmark found in the picture</string>
    <string name="facebook_app_id">1155284924987862</string>
    <string name="fb_login_protocol_scheme">fb1155284924987862</string>

    <string name="button_to_change_profile_picture">Button to change profile picture</string>
    <string name="button_to_edit_profile">Button to edit profile</string>
    <string name="my_friends">My Friends</string>
    <string name="profile_comments_button">Profile comments button</string>
    <string name="profile_comments_textview">Comments</string>
    <string name="profile_posts_button">Profile posts button</string>
    <string name="profile_posts_textview">Posts</string>
    <string name="profile_reviews_button">Profile reviews button</string>
    <string name="profile_reviews_textview">Reviews</string>
    <string name="profile_poi_history_button">Profile POI history button</string>
    <string name="profile_poi_history_textview">POI</string>
    <string name="profile_name_edit_textview">Name:</string>
    <string name="profile_name_edit_edittext">Your Name</string>
    <string name="profile_bio_edit_textview">About Me:</string>
    <string name="profile_bio_edit_edittext">Hi ! I am using Meili !</string>
    <string name="save_my_profile">Save My Profile</string>
    <string name="profile_edit_cancel">Cancel</string>
    <string name="sign_out">Sign Out</string>
    <string name="take_photo">Take photo</string>
    <string name="switch_camera">Switch camera</string>
    <string name="enter_message">Enter Message…</string>
    <string name="send_message">Send</string>
    <string name="my_feed">My Feed</string>
    <string name="forum_image">Forum image</string>

    <string name="add_friend">Add Friend</string>
    <string name="google_sign_in_prompt">Sign In to get access to all features!</string>
    <string name="sign_in">Sign In</string>
    <string name="access_no_sign_in">Meili\nLimited Functionality</string>
    <string name="launcher">Launcher</string>
    <string name="meili_lens">Meili Lens</string>
    <string name="lens">Lens</string>
    <string name="point_of_interest_detected">Point Of Interest Detected!</string>
    <string name="lens_camera">Lens camera</string>
    <string name="dismiss_lens">Dismiss lens</string>
    <string name="find_my_friend">Find My Friend</string>
    <string name="image">image</string>
    <string name="crop_photo">crop photo</string>
    <string name="effects">Effects</string>

    <string name="draw_on_image">Draw on image</string>
    <string name="filters">Filters</string>
    <string name="text">Text</string>
    <string name="add_text">Add Text</string>
    <string name="filter_none">None</string>
    <string name="filter_sepia">Sepia</string>
    <string name="filter_saturate">Saturate</string>
    <string name="filter_sharpen">Sharpen</string>
    <string name="filter_fish_eye">Fish Eye</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="finish_edit">Finish edit</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="emojis">Emojis</string>
    <string name="post_image">Post image</string>
    <string name="add_comment">Add comment</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="post_comment">Post comment</string>
    <string name="user_icon">User Icon</string>
    <string name="poi_image">poi image</string>
    <string name="textview">TextView</string>
    <string name="upvote">upvote</string>
    <string name="downvote">downvote</string>
    <string name="no_upvotes">0 Upvotes</string>
    <string name="forum">Forum</string>
    <string name="chat">Chat</string>
    <string name="reviews">Reviews</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="feed">Feed</string>
    <string name="favorite">Favorite</string>
    <string name="post_edit_title_hint">Title (70 characters max.)</string>
    <string name="post_edit_text_hint">Text (500 characters max.)</string>
    <string name="images">Images</string>
    <string name="use_camera">Use camera</string>
    <string name="use_gallery">Use gallery</string>
    <string name="create_post">Create post</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort by:</string>

    <string name="dark_light_mode_button">Dark / light mode button</string>
    <string name="missing_name">Missing Name</string>
    <string name="no_info">No Info</string>
    <string name="take_me_there">Take Me There</string>
    <string name="user_image">user image</string>
    <string name="call">call</string>
    <string name="find_my_friend">Find My Friend!</string>
    <string name="bluetooth">bluetooth</string>
    <string name="meili_nearby_lets_you_add_another_user_as_a_friend_if_your_devices_are_close">Meili Nearby lets you add another user as a friend if your devices are close.</string>
    <string name="favorite_pois">Favorite POIs</string>
    <string name="poi_info_activity">Info</string>
    <string name="forum_activity">Forum</string>
    <string name="chat_activity">Chat</string>
    <string name="reviews_activity">Reviews</string>
</resources>