<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".posts.forum.ForumActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        android:id="@+id/edit_post">

        <EditText
            android:id="@+id/post_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/post_edit_title_hint"
            android:inputType="textMultiLine"
            android:maxLength="70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/post_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/post_edit_text_hint"
            android:inputType="textMultiLine"
            android:maxLength="500"
            app:layout_constraintTop_toBottomOf="@id/post_edit_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/post_display_image"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/post_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            android:layout_height="0dp"
            android:contentDescription="@string/images" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_display_image"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/post_use_camera"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    app:srcCompat="@android:drawable/ic_menu_camera"
                    android:onClick="onClick"
                    android:contentDescription="@string/use_camera" />

                <ImageView
                    android:id="@+id/post_use_gallery"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    app:srcCompat="@android:drawable/ic_menu_gallery"
                    android:onClick="onClick"
                    android:contentDescription="@string/use_gallery" />

            </LinearLayout>

            <Button
                android:id="@+id/submit_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                style="@style/Theme.Meili.button"
                android:theme="@style/Theme.Meili.button"
                android:text="@string/create_post"
                />

            <Button
                android:id="@+id/cancel_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                style="@style/Theme.Meili.button"
                android:theme="@style/Theme.Meili.button"
                android:text="@string/cancel"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        android:id="@+id/list_posts">

        <TextView
            android:id="@+id/sort_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/sort_by"/>

        <Spinner
            android:id="@+id/sort_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/sort_by"
            android:layout_alignParentTop="true"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/forum_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/sort_spinner"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="33dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/create_post"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@drawable/navigation_selector"
        app:itemTextColor="@drawable/navigation_selector"
        app:menu="@menu/poi_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
